added components, some minor changes

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node server",
     "server": "nodemon server",
+    "install-all": "yarn install && cd client && yarn install",
     "client": "cd client && yarn start",
     "dev": "concurrently \"yarn server\" \"yarn client\""
   },
